# memer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  install.sh  memer  upper_lower.sh
.github/workflows/: bash_tests.yml  blank.yml  tests.yml
include/: memer.h
src/: codecov_test.cpp  memer.cpp  superscript.cpp  superscript.sh  upper_lower.cpp  upper_lower.sh  w_i_d_e.cpp  w_i_d_e.sh
test/: CMakeLists.txt  memer-utest.cpp  superscript_test.cpp  test.sh  upper_lower_test.cpp  w_i_d_e_test.cpp
